# cli

./: Dockerfile  README.md  pyproject.toml  requirements.txt  serve.py  setup.cfg
metaskingcli/: __main__.py  main.py  utils.py
metaskingcli/api/: base.py  log.py  record.py
metaskingcli/args/: __init__.py  model.py  parse.py
metaskingcli/commands/: __init__.py  delete.py  edit.py  list.py  next.py  pause.py  report.py  resume.py  set.py  show.py  start.py  status.py  stop.py
metaskingcli/commands/tui/: __init__.py  app.py  calendar.py  editable.py  offset_time.py  range_bar.py  report.py  scrollable_auto_load.py  slider.py  work_log.py  work_log_list.py
