[build-system]
requires = [
   "setuptools>=61.0",
   "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "metaskingcli"
version = "1.0.0"
authors = [
    { name="Jiří Kuchyňka", email="anty150@gmail.com" },
]
description = "meTasking CLI - Manage your work time logging from CLI"
requires-python = ">=3.11"
classifiers = [
   "Programming Language :: Python :: 3",
   "Operating System :: OS Independent",
]
